Fix menu item overflow bug in some browsers

--- a/sundsvall_se-theme/assets/css/scss/partials/_site-navigation.scss
+++ b/sundsvall_se-theme/assets/css/scss/partials/_site-navigation.scss
@@ -83,7 +83,7 @@
 		display: block;
 	}
 
-	ul {
+	nav {
 		margin-bottom: 0;
 		@include media-breakpoint-up(md) {
 			display: flex;
@@ -96,81 +96,79 @@
 		}
 	}
 
-	li {
+	nav a {
+		min-width: 0;
+		display: inline-flex;
+		flex-wrap: wrap;
+		align-items: center;
+		padding: 1.75em $spacer-x 1.75em $spacer-x;
+		border-bottom: 1px solid $gray-lighter;
 		width: 100%;
+		@include media-breakpoint-up(md) {
+			width: auto;
+			justify-content: center;
+			text-align: center;
+			//border-bottom: 5px solid $gray-lighter;
+			border-bottom: 5px solid #DEE4E9;
+			padding: 2em .5em 2em .5em;
+		}
+		@include media-breakpoint-up(lg) {
+			text-align: left;
+			flex-wrap: nowrap;
+		}
+		color: inherit;
+	}
 
-		a {
-			width: 100%;
-			display: inline-flex;
-			flex-wrap: wrap;
-			align-items: center;
-			padding: 1.75em $spacer-x 1.75em $spacer-x;
-			border-bottom: 1px solid $gray-lighter;
-			@include media-breakpoint-up(md) {
-				justify-content: center;
-				text-align: center;
-				//border-bottom: 5px solid $gray-lighter;
-				border-bottom: 5px solid #DEE4E9;
-				padding: 2em .5em 2em .5em;
-			}
-			@include media-breakpoint-up(lg) {
-				text-align: left;
-				flex-wrap: nowrap;
-			}
-			color: inherit;
+	&:hover a,
+	&.current-menu-item a {
+		text-decoration: none;
+	}
+
+	.menu-item-icon {
+		fill: #fff;
+		background: $brand-primary;
+		display: inline-block;
+		border-radius: 50%;
+		vertical-align: middle;
+		position: relative;
+		margin-right: $spacer-x/2;
+
+		min-width: 3rem;
+		min-height: 3rem;
+
+		@include media-breakpoint-up(md) {
+			margin-bottom: .5em;
+			margin-right: .2em;
 		}
 
-		&:hover a,
-		&.current-menu-item a {
-			text-decoration: none;
+		@include media-breakpoint-up(lg) {
+			margin-bottom: 0;
 		}
 
-		.menu-item-icon {
-			fill: #fff;
-			background: $brand-primary;
-			display: inline-block;
-			border-radius: 50%;
-			vertical-align: middle;
-			position: relative;
+		@include media-breakpoint-up(xl) {
 			margin-right: $spacer-x/2;
-
-			min-width: 3rem;
-			min-height: 3rem;
-
-			@include media-breakpoint-up(md) {
-				margin-bottom: .5em;
-				margin-right: .2em;
-			}
-
-			@include media-breakpoint-up(lg) {
-				margin-bottom: 0;
-			}
-
-			@include media-breakpoint-up(xl) {
-				margin-right: $spacer-x/2;
-				min-width: 3.5rem;
-				min-height: 3.5rem;
-			}
-
-			.icon {
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-				width: 60%;
-				height: 60%;
-			}
+			min-width: 3.5rem;
+			min-height: 3.5rem;
 		}
 
-		.menu-item-text {
-			display: inline-block;
-			vertical-align: middle;
-			@include media-breakpoint-down(sm) {
-				font-family: $font-family-large;
-			}
-			@include media-breakpoint-up(md) {
-				min-height: 2.5em;
-			}
+		.icon {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 60%;
+			height: 60%;
+		}
+	}
+
+	.menu-item-text {
+		display: inline-block;
+		vertical-align: middle;
+		@include media-breakpoint-down(sm) {
+			font-family: $font-family-large;
+		}
+		@include media-breakpoint-up(md) {
+			min-height: 2.5em;
 		}
 	}
 
@@ -179,9 +177,9 @@
 			.menu-item-icon {
 				background-color: $color;
 			}
-			&:hover a,
-			&.current-menu-item a,
-			&.current-page-ancestor a {
+			&:hover,
+			&.current-menu-item,
+			&.current-page-ancestor {
 				@include media-breakpoint-up(md) {
 					border-bottom-color: $color;
 				}
